[feat] change TOP10

--- a/categorias.html
+++ b/categorias.html
@@ -45,29 +45,73 @@
       </div>
     </section>
 
-    <section class="carrossel">
-      <h2>TOP 10 Quizzes</h2>
-      <div class="slider">
-        <!-- Cards fictícios -->
+    <section class="carrossel top10">
+        <h2>TOP 10 Quizzes</h2>
         <div class="slider">
+          <div class="card-container">
+            <span class="posicao">1</span>
             <div class="card">
               <img src="img/harry-potter3.png" alt="Harry Potter e o Prisioneiro de Azkaban">
             </div>
+          </div>
+          <div class="card-container">
+            <span class="posicao">2</span>
             <div class="card">
-              <img src="img/livros/percyjackson.jpg" alt="Percy Jackson">
+              <img src="img/percy-jackson2.png" alt="Percy Jackson e o Mar de Monstros">
             </div>
+          </div>
+          <div class="card-container">
+            <span class="posicao">3</span>
             <div class="card">
-              <img src="img/livros/jogosvorazes.jpg" alt="Jogos Vorazes">
+              <img src="img/jogos-vorazes.png" alt="Jogos Vorazes">
             </div>
-        <div class="card">Livro 4</div>
-        <div class="card">Livro 5</div>
-        <div class="card">Livro 6</div>
-        <div class="card">Livro 7</div>
-        <div class="card">Livro 8</div>
-        <div class="card">Livro 9</div>
-        <div class="card">Livro 10</div>
-      </div>
-    </section>
+          </div>
+          <div class="card-container">
+            <span class="posicao">4</span>
+            <div class="card">
+              <img src="img/harry-potter1.png" alt="Harry Potter e a Pedra Filosofal">
+            </div>
+          </div>
+          <div class="card-container">
+            <span class="posicao">5</span>
+            <div class="card">
+              <img src="img/maze-runner.png" alt="Maze Runner - Correr ou Morrer">
+            </div>
+          </div>
+          <div class="card-container">
+            <span class="posicao">6</span>
+            <div class="card">
+              <img src="img/divergente.png" alt="Divergente">
+            </div>
+          </div>
+          <div class="card-container">
+            <span class="posicao">7</span>
+            <div class="card">
+              <img src="img/pequeno-principe.png" alt="O Pequeno Príncipe">
+            </div>
+          </div>
+          <div class="card-container">
+            <span class="posicao">8</span>
+            <div class="card">
+              <img src="img/o-alienista.png" alt="O Alienista">
+            </div>
+          </div>
+          <div class="card-container">
+            <span class="posicao">9</span>
+            <div class="card">
+              <img src="img/dom-quixote.png" alt="Dom Quixote">
+            </div>
+          </div>
+          <div class="card-container">
+            <span class="posicao posicao-dupla">10</span>
+            <div class="card">
+              <img src="img/guerra-dos-tronos.png" alt="A Guerra dos Tronos">
+            </div>
+          </div>
+        </div>
+      </section>
+      
+      
 
     <!-- Gêneros em ordem alfabética -->
     <section class="carrossel" id="aventura">
