[feat] change aventura

--- a/categorias.html
+++ b/categorias.html
@@ -117,9 +117,37 @@
     <section class="carrossel" id="aventura">
       <h2>Aventura</h2>
       <div class="slider">
-        <div class="card">Percy Jackson</div>
-        <div class="card">As Aventuras de Tom Sawyer</div>
-      </div>
+        <div class="card">
+            <img src="img/Aventura/a-bussola-de-ouro.png" alt="A bússola de Ouro">
+        </div>
+        <div class="card">
+            <img src="img/Aventura/a-ilha-do-tesouro.png" alt="A Ilha do Tesouro">
+        </div>
+        <div class="card">
+            <img src="img/Aventura/as-aventuras-de-huckleberry-finn.png" alt="As Aventuras de Huckleberry Finn">
+        </div>
+        <div class="card">
+            <img src="img/Aventura/as-cronicas-de-narnia.png" alt="As Crônicas de Nárnia">
+        </div>
+        <div class="card">
+            <img src="img/Aventura/moby-dick.png" alt="Moby-Dick">
+        </div>
+        <div class="card">
+            <img src="img/Aventura/o-conde-de-monte-cristo.png" alt="O Conde de Monte Cristo">
+        </div>
+        <div class="card">
+            <img src="img/Aventura/o-hobbit.png" alt="O Hobbit">
+        </div>
+        <div class="card">
+            <img src="img/Aventura/o-senhor-dos-aneis.png" alt="O Senhor dos Anéis">
+        </div>
+        <div class="card">
+            <img src="img/Aventura/as-aventuras-de-sherlock-holmes.png" alt="As Aventuras de Sherlock Holmes">
+        </div>
+        <div class="card">
+            <img src="img/Aventura/viagem-ao-centro-da-terra.png" alt="Viagem ao Centro da Terra">
+        </div>
+
     </section>
 
     <section class="carrossel" id="fantasia">
