[feat] change romance e suspense

--- a/categorias.html
+++ b/categorias.html
@@ -221,17 +221,73 @@
     <section class="carrossel" id="suspense">
       <h2>Suspense</h2>
       <div class="slider">
-        <div class="card">Garota Exemplar</div>
-        <div class="card">O Silêncio dos Inocentes</div>
-      </div>
+        <div class="card">
+            <img src="img/Suspense/garota-exemplar.png" alt="Garota Exemplar">
+        </div>
+        <div class="card">
+            <img src="img/Suspense/o-silencio-dos-inocentes.png" alt="O Silêncio dos Inocentes">
+        </div>
+        <div class="card">
+            <img src="img/Suspense/a-garota-no-trem.png" alt="A Garota no Trem">
+        </div>
+        <div class="card">
+            <img src="img/Suspense/os-homens-que-nao-amavam-as-mulheres.png" alt="Os Homens que Não Amavam as Mulheres">
+        </div>
+        <div class="card">
+            <img src="img/Suspense/antes-de-dormir.png" alt="Antes de Dormir">
+        </div>
+        <div class="card">
+            <img src="img/Suspense/verity.png" alt="Verity">
+        </div>
+        <div class="card">
+            <img src="img/Suspense/o-colecionador.png" alt="O Colecionador">
+        </div>
+        <div class="card">
+            <img src="img/Suspense/a-paciente-silenciosa.png" alt="A Paciente Silenciosa">
+        </div>
+        <div class="card">
+            <img src="img/Suspense/o-codigo-da-vinci.png" alt="O Código Da Vinci">
+        </div>
+        <div class="card">
+            <img src="img/Suspense/a-mulher-na-janela.png" alt="A Mulher na Janela">
+        </div>
+        
     </section>
 
     <section class="carrossel" id="terror">
       <h2>Terror</h2>
       <div class="slider">
-        <div class="card">It: A Coisa</div>
-        <div class="card">O Iluminado</div>
-      </div>
+        <div class="card">
+            <img src="img/Terror/o-iluminado.png" alt="O Iluminado">
+        </div>
+        <div class="card">
+            <img src="img/Terror/it-a-coisa.png" alt="It: A Coisa">
+        </div>
+        <div class="card">
+            <img src="img/Terror/dracula.png" alt="Drácula">
+        </div>
+        <div class="card">
+            <img src="img/Terror/frankenstein.png" alt="Frankenstein">
+        </div>
+        <div class="card">
+            <img src="img/Terror/a-volta-do-parafuso.png" alt="A Volta do Parafuso">
+        </div>
+        <div class="card">
+            <img src="img/Terror/o-exorcista.png" alt="O Exorcista">
+        </div>
+        <div class="card">
+            <img src="img/Terror/o-ritual.png" alt="O Ritual">
+        </div>
+        <div class="card">
+            <img src="img/Terror/o-demonologista.png" alt="O Demonologista">
+        </div>
+        <div class="card">
+            <img src="img/Terror/o-medico-e-o-monstro.png" alt="O Médico e o Monstro">
+        </div>
+        <div class="card">
+            <img src="img/Terror/assombracao-na-casa-da-colina.png" alt="Assombração na Casa da Colina">
+        </div>
+        
     </section>
   </main>
 
