[feat] create buttons

--- a/categorias.html
+++ b/categorias.html
@@ -45,6 +45,15 @@
       </div>
     </section>
 
+    <div class="genre-buttons">
+        <button onclick="scrollToGenre('aventura')">Aventura</button>
+        <button onclick="scrollToGenre('fantasia')">Fantasia</button>
+        <button onclick="scrollToGenre('romance')">Romance</button>
+        <button onclick="scrollToGenre('suspense')">Suspense</button>
+        <button onclick="scrollToGenre('terror')">Terror</button>
+    </div>
+    
+
     <section class="carrossel top10">
         <h2>TOP 10 Quizzes</h2>
         <div class="slider">
@@ -112,7 +121,7 @@
       </section>
       
     <section class="carrossel" id="aventura">
-      <h2>Aventura</h2>
+        <h2>Aventuras</h2>
       <div class="slider">
         <div class="card">
             <img src="img/Aventura/a-bussola-de-ouro.png" alt="A bússola de Ouro">
@@ -148,7 +157,7 @@
     </section>
 
     <section class="carrossel" id="fantasia">
-      <h2>Fantasia</h2>
+        <h2>Fantasias</h2>
       <div class="slider">
         <div class="card">
             <img src="img/Fantasia/a-filha-do-sangue.png" alt="A Filha do Sangue">
@@ -183,7 +192,7 @@
     </section>
 
     <section class="carrossel" id="romance">
-      <h2>Romance</h2>
+        <h2>Romances</h2>
       <div class="slider">
         <div class="card">
             <img src="img/Romance/orgulho-e-preconceito.png" alt="Orgulho e Preconceito">
@@ -219,7 +228,7 @@
     </section>
 
     <section class="carrossel" id="suspense">
-      <h2>Suspense</h2>
+        <h2>Suspenses</h2>
       <div class="slider">
         <div class="card">
             <img src="img/Suspense/garota-exemplar.png" alt="Garota Exemplar">
@@ -255,7 +264,7 @@
     </section>
 
     <section class="carrossel" id="terror">
-      <h2>Terror</h2>
+        <h2>Terror</h2>
       <div class="slider">
         <div class="card">
             <img src="img/Terror/o-iluminado.png" alt="O Iluminado">
